Separate Apollo Heatshield from Apollo Capsule (#73)
Still leave a small amount of ablator on the main capsules.  Discover why this appears to be necessary, ie why the part can still get interpreted as being in the airflow and take convective heating.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -1,42 +1,32 @@
 PART
 {
-	name = ROC-ApolloHSBlockIII
+	name = ROC-ApolloHSBlockIII+
 	module = Part
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
 
-	//	============================================================================
-	//	Model and Dimensions
-	//	============================================================================
-
-	MODEL // Model for the Heat Shield
+	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
+		scale = 1.0, 1.0, 1.0
 	}
 
-	scale = 1.0
 	rescaleFactor = 1.0
-
 	node_stack_bottom = 0.0, -0.53, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, -0.53, 0.0, 0.0, 1.0, 0.0, 1
 
-	attachRules = 1,0,1,0,0
-
-	fx_gasBurst_white = 0.0, -0.53, 0.0, 0.0, 1.0, 0.0, decouple
-
-	//	============================================================================
-	//	Title, Description, Category, Techs
-	//	============================================================================
-
-	TechRequired = unlockParts
-	cost = 150
+	TechRequired = start
 	entryCost = 1
+	cost = 1
 	category = Thermal
 	subcategory = 0
 	title = Apollo Block III+ Heatshield
 	manufacturer = Rockwell International
 	description = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
+
+	attachRules = 1,0,1,0,0
+
 	tags = apollo heat shield heatshield reentry
 
 	bulkheadProfiles = size1p2
@@ -56,6 +46,7 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
+	bulkheadProfiles = size1p2
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 3.91
@@ -65,24 +56,16 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
+}
 
-	//	============================================================================
-	//	Modules and Resources
-	//	============================================================================
-
-	MODULE
+// Specific adjustments after default setup
+@PART[ROC-ApolloHSBlockIII+]:AFTER[RealismOverhaul_HeatShield]
+{
+	@MODULE[ModuleAblator]
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
 	}
 }
 
