--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -25,13 +25,6 @@ PART
 		rotation = 0.0, 180.0, 0.0
 	}
 
-	MODEL // Model for the Heat Shield
-	{
-		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
-		scale = 1.0, 1.0, 1.0
-		position = 0.0, -0.713, 0.0
-	}
-
 	scale = 1.0
 	rescaleFactor = 1.0
 
@@ -54,7 +47,7 @@ PART
 	manufacturer = North American Aviation
 	description = The Command Module of the Apollo spacecraft. Apollo was the spacecraft that transported humans to the Moon in the 1960's and 1970's. It has room for three crew. [Diameter: 3.91 m]
 	
-	mass = 4.385
+	mass = 3.234
 	
 	category = Pods
 	subcategory = 0
@@ -62,7 +55,7 @@ PART
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v
 	
 	TechRequired = unlockParts
-	cost = 150
+	cost = 1
 	entryCost = 1
 	
 	vesselType = Ship
@@ -80,51 +73,44 @@ PART
 		
 	crashTolerance = 8
 	maxTemp = 973.15
-	emissiveConstant = 0.6 // not too absorptive for reentry
+	skinMaxTemp = 3600
+	emissiveConstant = 0.54 // stainless steel
 	thermalMassModifier = 1.0
-	skinMassPerArea = 2.0
+	skinMassPerArea = 7.9 //1 mm thick stainless
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
 	
 	fuelCrossfeed = true
 	
-	MODULE
-	{
-		name = ModuleColorChanger
-		moduleID = HeatShieldCharAnim
-		shaderProperty = _BurnColor
-		useRate = False
-		toggleInEditor = False
-		toggleInFlight = False
-
-		redCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		greenCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		blueCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		alphaCurve
-		{
-			key = 0 0.8
-		}
-	}
-	
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.75
+		lossExp = -40000
+		lossConst = 15000
+		pyrolysisLossFactor = 40000
+		ablationTempThresh = 500
+		reentryConductivity = 0.01
+		infoTemp = 3000
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 10
+		amount = 10
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 7.5
+		amount = 0
+	}
 	
 	MODULE
 	{
@@ -146,7 +132,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.17
+		DescentModeCoM = 0, 0, -0.17
 	}
 
 	MODULE
@@ -165,21 +151,6 @@ PART
 		endEventGUIName = Turn Off Lights
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
-	}
-	
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
@@ -494,14 +465,13 @@ PART
 	{
 		running
 		{
-			AUDIO_MULTI_POOL
+			AUDIO
 			{
 				channel = Ship
 				clip = sound_rocket_mini
-				transformName = RCSthruster
 				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
+				volume = 0.1 0.0
+				volume = 0.5 0.025
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -519,24 +489,6 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
-	}
-}
-
-// Let RO Heatshield configure defaults
-@PART[ROC-ApolloCM]:BEFORE[RealismOverhaul_HeatShield]
-{
-	heatShieldDiameter	= 3.91		// Previous Ablator = 848 corresponds to 3.68 diameter Lunar RO formula
-	heatShieldTag = Lunar
-	resetHeatShieldAblator = true
-}
-// Specific adjustments after default setup
-@PART[ROC-ApolloCM]:AFTER[RealismOverhaul_HeatShield]
-{
-	@MODULE[ModuleAblator]
-	{
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
 	}
 }
 
