--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -45,17 +45,19 @@ PART
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-
-	TechRequired = improvedCapsules
-	cost = 150
-	entryCost = 1
-	category = Pods
-	subcategory = 0
+	
 	title = Apollo Block III+ Command Module (CM)
 	manufacturer = Rockwell International
 	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
-	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
+	TechRequired = start
+	entryCost = 1
+	cost = 1
+	category = Pods
+	subcategory = 0
+
+	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v
+	
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
 	CrewCapacity = 5
@@ -118,6 +120,32 @@ PART
 
 	MODULE
 	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.75
+		lossExp = -40000
+		lossConst = 15000
+		pyrolysisLossFactor = 40000
+		ablationTempThresh = 500
+		reentryConductivity = 0.01
+		infoTemp = 3000
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 10
+		amount = 10
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 7.5
+		amount = 0
+	}
+  
+	MODULE
+	{
 		name = ModuleCommand
 		minimumCrew = 0
 		RESOURCE
@@ -155,21 +183,6 @@ PART
 		endEventGUIName = Turn Off Lights
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
-	}
-
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
 	}
 
 	MODULE
