RealAntennas and Gemini Texture Fixes (#77)
Swap order with multiple RealAntennas declarations (bug workaround)
Update some Gemini textures

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM.cfg
@@ -339,6 +339,23 @@ PART
 }
 
 //	================================================================================
+//	Configure RealAntennas
+//	================================================================================
+// Four omnidirectional S-band antennas on the CM were used when the attitude of the CSM kept the high-gain antenna from being pointed at Earth. These antennas were also used between SM jettison and landing.
+// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
+
+@PART[ROC-ApolloSM]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 2.0		//Guess based on Block II
+		RFBand = VHF	//Default to VHF-band
+	}
+}
+
+//	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
 
