Revamp CH-4 Patch, Fix Any Load issues in 1.11

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[!CH4]
+PART
 {
 	name = ROC-D2Antenna
 	module = Part
@@ -70,6 +70,7 @@ PART:NEEDS[!CH4]
 		endEventGUIName = Retract Antenna
 		actionGUIName = Toggle Antenna
 		allowAnimationWhileShielded = False
+		useMultipleDragCubes = true
 	}
 
 	MODULE:NEEDS[!RemoteTech]
