--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[!CH4]
+PART
 {
 	name = ROC-D2CM
 	module = Part
@@ -128,6 +128,7 @@ PART:NEEDS[!CH4]
 		endEventGUIName = Lights Off
 		actionGUIName = Toggle Lights
     	defaultActionGroup = Light
+		useMultipleDragCubes = false
 	}
 
 	MODULE
@@ -349,6 +350,17 @@ PART:NEEDS[!CH4]
 {
     %maxTemp = 900
     %skinMaxTemp = 3600
+}
+
+// Specific adjustments after default setup
+@PART[ROC-D2CM]:AFTER[RealismOverhaul_HeatShield]
+{
+	@MODULE[ModuleAblator]
+	{
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
+	}
 }
 
 //	==================================================
