--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[!CH4]
+PART
 {
 	name = ROC-D2MissionModule1
 	module = Part
@@ -89,6 +89,7 @@ PART:NEEDS[!CH4]
 		endEventGUIName = Lights Off
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
+		useMultipleDragCubes = false
 	}
 
 	MODULE
