--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Solar.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[!CH4]
+PART
 {
 	name = ROC-D2Solar
 	module = Part
@@ -81,8 +81,8 @@ PART:NEEDS[!CH4]
 	
 	SolarConfig
 	{
-		area = 8.05
-		level = 1
+		area = 2.2868
+		level = 2
 		type = tracking
 	}
 }
