--- a/GameData/ROCapsules/PartConfigs/Apollo D2/TU_Support_ApolloD2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/TU_Support_ApolloD2.cfg
@@ -2,6 +2,11 @@
 //	Apollo Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloD2
