--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[!CH4]
+PART
 {
 	name = ROC-D2MissionModule2
 	module = Part
@@ -90,6 +90,7 @@ PART:NEEDS[!CH4]
 		endEventGUIName = Lights Off
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
+		useMultipleDragCubes = false
 	}
 
 	MODULE
