Fix Solar Panel Config

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSHeatshield.cfg
@@ -80,3 +80,14 @@ PART
 		explosiveNodeID = top
 	}
 }
+
+// Specific adjustments after default setup
+@PART[ROC-SoyuzMSHeatshield]:AFTER[RealismOverhaul_HeatShield]
+{
+	@MODULE[ModuleAblator]
+	{
+		charModuleName = HeatShieldCharAnim
+		charMin = 0
+		charMax = 1
+	}
+}
