--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSSolarPanel.cfg
@@ -70,7 +70,6 @@ PART
 		resourceName = ElectricCharge
 		chargeRate = 0.575
 		animationName = SOLAR
-		retractable = false
 		secondaryTransformName = sunCatcher
 		isBreakable = False
 		retractable = False
@@ -84,7 +83,7 @@ PART
 
 	SolarConfig
 	{
-		area = 14.586
+		area = 6.6718
 		level = 7
 		type = static
 	}
@@ -97,7 +96,8 @@ PART
 
 	@SolarConfig
 	{
-		@area = 13.486
+		@area = 5.5718
+		@level = 6
 	}
 }
 
