--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/TU_Support_SoyuzMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/TU_Support_SoyuzMS.cfg
@@ -2,6 +2,11 @@
 //	Soyuz MS Textures Unlimited Support
 //	============================================================================
 
+@REFLECTION_CONFIG[default]
+{
+	%enabled = true
+}
+
 KSP_MODEL_SHADER
 {
 	name = ROC-SoyuzMSCapsule
